# chicken-banana

./: README.md  pyproject.toml
ascii_frames/: frame_00000.txt  frame_00005.txt  frame_00008.txt  frame_00009.txt  frame_00012.txt  frame_00013.txt  frame_00018.txt  frame_00021.txt  frame_00022.txt  frame_00023.txt  frame_00026.txt  frame_00037.txt  frame_00038.txt  frame_00044.txt  frame_00045.txt  frame_00049.txt  frame_00050.txt  frame_00051.txt  frame_00052.txt  frame_00054.txt  frame_00067.txt  frame_00068.txt  frame_00073.txt  frame_00080.txt  frame_00081.txt  frame_00082.txt  frame_00087.txt  frame_00095.txt  frame_00096.txt  frame_00105.txt  frame_00108.txt  frame_00109.txt  frame_00110.txt  frame_00111.txt  frame_00113.txt  frame_00114.txt  frame_00115.txt  frame_00122.txt  frame_00124.txt  frame_00136.txt  (+7 more)
src/video_to_ascii/: play_ascii_in_terminal.py  video_to_ascii.py
